--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --ui",
+    "test": "vitest",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "@vitest/ui": "^0.29.2",
     "autoprefixer": "^10.4.14",
     "jsdom": "^21.1.0",
+    "msw": "^1.2.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0",
